# AAlgoI

./: .coverage  .gitignore  AAlgoI_Architecture.drawio  API.md  Dockerfile  MANIFEST.in  README.md  demo.py  demo_aalgoi.py  docker-compose.yml  examples.py  main.py  pipeline.py  pyproject.toml  requirements.txt  run_attention_verify.py  setup.py  test_aalgoi.py  test_pretrained_rl.py  verify_build.py
.opencode/plans/: v2.0.6-fixes.md
aalgoi/: __init__.py  _cli.py  _core.py  _data.py  _lazy.py  _result.py  _session.py  _status.py  api.py  cli.py  errors.py  pipeline.py  shortcuts.py  types.py
aalgoi/algorithms/: __init__.py  base.py  dp.py  graph.py  image.py  math.py  ml.py  nlp.py  optimization.py  primitives.py  registry.py  safety.py  searching.py  sorting.py  strings.py
aalgoi/core/: __init__.py  algorithm_embedder.py  algorithm_marketplace.py  algorithm_synthesizer.py  ast_optimizer.py  bandit.py  benchmarker.py  checkpoint_downloader.py  checkpoint_manager.py  compositor.py  context_engine.py  decision_log.py  differential_privacy.py  drift_detector.py  explainer.py  federated_sync.py  genetic_evolver.py  knowledge_base.py  knowledge_graph.py  llm_adapter.py  llm_client.py  meta_controller.py  oracles.py  performance_tracker.py  pipeline_graph.py  problem_library.py  problem_spec.py  prompt_builder.py  question_parser.py  registry_manager.py  registry_sync.py  sandboxed_executor.py  smart_solver.py  token_manager.py  validator.py  visualization.py
aalgoi/data/: __init__.py  detectors.py  file_loaders.py  normalize.py
aalgoi/eval/: __init__.py  benchmark_suite.py  metrics.py  reports.py
aalgoi/kg/: __init__.py  graph.py  queries.py  seed.py  store.py  updater.py
aalgoi/mind/: __init__.py  benchmark.py  checkpoint.py  learning.py  mind.py  session.py
aalgoi/problems/: __init__.py  examples.py  generators.py  oracles.py  parser.py
aalgoi/rl/: __init__.py  buffers.py  env.py  policy.py  rewards.py  trainer.py
aalgoi/sandbox/: __init__.py  instance_store.py  policy.py  reward_bridge.py  sandbox_rl.py  state_bridge.py
aalgoi/security/: __init__.py  policies.py  sandbox.py
aalgoi/selection/: __init__.py  bandit.py  features.py  planner.py  rankers.py
aalgoi/synthesis/: __init__.py  promotion.py  templates.py  validator.py
algorithms/: __init__.py  base.py  primitives.py  safety.py
algorithms/image_processing/: __init__.py
algorithms/ml/: __init__.py  base.py  classical.py  clustering.py  embeddings.py  ensemble.py
algorithms/nlp/: __init__.py  generation.py  retrieval.py  text_analysis.py  word_embeddings.py
algorithms/optimization/: __init__.py  optimization_algos.py
algorithms/pathfinding/: __init__.py  pathfinding_algos.py
algorithms/sorting/: sorting_algos.py
checkpoints/: pretrained_v1.pt  pretrained_v1_meta.json
checkpoints/pretrain_v2/: best_model_ep1000.pt  best_model_ep1500.pt  best_model_ep500.pt  pretrained_final.pt  training_summary.json
config/: config.json
core/: __init__.py  algorithm_embedder.py  algorithm_marketplace.py  algorithm_synthesizer.py  ast_optimizer.py  bandit.py  benchmarker.py  checkpoint_downloader.py  checkpoint_manager.py  compositor.py  context_engine.py  explainer.py  federated_sync.py  knowledge_base.py  knowledge_graph.py  llm_adapter.py  meta_controller.py  pipeline_graph.py  problem_library.py  problem_spec.py  question_parser.py  registry_manager.py  registry_sync.py  sandboxed_executor.py  smart_solver.py  token_manager.py  validator.py
core/rl/: __init__.py  environment.py  lora_adapter.py  powerhouse_agent.py  replay_buffer.py  reward_shaper.py
docs/: API.md  CHEATSHEET.md
domains/: __init__.py
examples/: demo_aalgoi.py  mvp_demo.py  test_aalgoi.py
experimental/: _cli.py  _core.py  _data.py  _result.py  _session.py  _status.py  pipeline.py  shortcuts.py
experimental/algorithms/: primitives.py  safety.py
interface/: __init__.py  api.py  cli.py  cli_debug.py  cli_ml.py  nl_parser.py  web_ui.py
scripts/: main.py  verify_build.py
server/: database.py  deploy.py  federation_api.py  fly.toml  requirements.txt
stress_tests/: test_01_cold_start.py  test_02_domain_routing.py  test_03_self_healing.py  test_04_learning.py  test_05_dynamic_registry.py  test_06_lora_no_forgetting.py  test_07_rollback.py  test_08_registry_sync.py  test_09_edge_cases.py  test_10_sustained_load.py  test_11_cross_domain.py  test_12_synthesis.py  test_13_ast.py
tests/: conftest.py  test_algorithm_registry.py  test_ast_optimizer.py  test_benchmark.py  test_comprehensive.py  test_cross_domain.py  test_data.py  test_data_normalizer.py  test_federation_api.py  test_full_integration.py  test_graph_integer_nodes.py  test_integration.py  test_knowledge_graph.py  test_llm_synthesis.py  test_mind_lifecycle.py  test_ml_algorithms.py  test_multi_domain.py  test_never_fail.py  test_nlp_algorithms.py  test_normalization.py  test_optimization.py  test_pathfinding.py  test_phase1.py  test_phase2.py  test_phase4.py  test_pretrained_rl.py  test_public_api.py  test_registry_sync.py  test_result.py  test_rl_basic.py  test_sandbox_rl.py  test_sandbox_security.py  test_security_extended.py  test_session.py  test_shortcuts.py  test_smoke.py  test_solvers.py  test_synthesis_smoke.py  test_ultimate_challenge.py
tests/core/: test_explainer.py  test_meta_controller.py
tests/integration/: test_pipeline.py
tests/mind/: test_benchmark.py  test_bootstrap.py  test_cognitive_actions.py  test_federation.py  test_integration.py  test_knowledge_graph.py  test_mind_state.py  test_model_config.py  test_safety.py  test_solving_loop.py  test_synthesis.py
tests/performance/: test_benchmarks.py
tests/property/: test_algorithms.py  test_property.py
tests/security/: test_security.py
tests/stress/: test_03_self_healing.py  test_04_learning.py  test_07_rollback.py  test_09_edge_cases.py  test_13_ast.py
training/: __init__.py  algorithm_discovery.py  curriculum.py  data_generator.py  distributed_train.py  federated_train.py  full_train.py  pretrain.py  pretrain_master.py  run_pretraining.py  self_play.py  self_play_train.py
(+156 files in other folders)
