[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aalgoi"
version = "1.1.0"
description = "Artificial Algorithm Intelligence - Self-Adaptive Algorithm Selection & Universal Problem Solving"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AAlgoI Team"}]

keywords = ["algorithm", "meta-learning", "optimization", "AI", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "psutil>=5.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "chromadb>=1.5.0",
    "networkx>=3.0",
    "requests>=2.28.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
llm = ["ollama"]
web = ["gradio", "fastapi", "uvicorn"]
rl = ["torch>=2.0.0", "gymnasium>=0.28.0"]
full = [
    "chromadb>=1.5.0",
    "networkx>=3.0",
    "requests>=2.25.0",
    "ollama",
    "gradio",
    "fastapi",
    "uvicorn",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/RayAKaan/AAlgoI"
Repository = "https://github.com/RayAKaan/AAlgoI"

[project.scripts]
aalgoi = "interface.cli:main"
aalgoi-web = "interface.web_ui:launch"
aalgoi-api = "interface.api:run"

[tool.setuptools.packages.find]
include = ["core*", "algorithms*", "interface*", "domains*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
