[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aalgoi"
version = "2.1.0"
description = "Algorithmic AI — an algorithmic mind that learns, reasons, and discovers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "aalgoi"}]
keywords = [
    "algorithms",
    "ai",
    "reinforcement-learning",
    "knowledge-graph",
    "synthesis",
    "numpy",
    "pandas",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-timeout>=2.0"]
data = ["pandas>=2.0", "polars>=0.20", "pyarrow>=12.0"]
nlp = ["transformers>=4.30", "gensim>=4.3", "chromadb>=0.4"]
all = [
    "torch>=2.0",
    "pandas>=2.0",
    "polars>=0.20",
    "scipy>=1.10",
    "pyarrow>=12.0",
    "pydantic>=2.0",
    "Pillow>=9.0",
    "transformers>=4.30",
    "gensim>=4.3",
    "chromadb>=0.4",
    "click>=8.0",
    "psutil>=5.0",
    "gymnasium>=0.28",
]

[project.scripts]
aalgoi = "aalgoi._cli:main"

[tool.setuptools.packages.find]
include = ["aalgoi*"]

[tool.setuptools.package-data]
aalgoi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
